--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -46,7 +46,7 @@
                 </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@book.BookId" class="btn btn-info btn-sm">Details</a>
-                    <a asp-action="Edit" asp-route-id="book.BookId" class="btn btn-warning btn-sm" >Edit</a>
+                    <a asp-action="Edit" asp-route-id="@book.BookId" class="btn btn-warning btn-sm" >Edit</a>
                     <a asp-action="Delete" asp-route-id="@book.BookId" class="btn btn-danger btn-sm">Delete</a>
                     @if(book.IsAvailable)
                     {
